--- a/index.html
+++ b/index.html
@@ -1,2 +1,87 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Helvetica+Neue&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v3_93"><div class="v3_94"><div class="name"></div><div class="v3_96"><span class="v3_97">First</span><span class="v3_98">Second</span><span class="v3_99">Third</span><span class="v3_100">Fourth</span><span class="v3_101">Fifth</span><span class="v3_102">Sixth</span><div class="name"></div></div></div><div class="v3_105"><div class="v3_108"><div class="v3_109"><span class="v3_110">Flawless Websites, Built Just for You</span><span class="v3_111">We help you build stunning, high-converting websites without coding. Just share your vision, and we’ll handle the rest.”</span></div><div class="v3_112"><div class="name"></div><span class="v3_114">Over 50+ businesses trust 
-us to build their websites.</span></div></div><div class="v105_126"></div></div><div class="v3_115"><div class="v3_117"><div class="v3_118"><div class="v3_119"><div class="name"></div><span class="v3_121">Smart, Scalable UI Design</span></div><span class="v3_122">✅ Smart, Scalable UI Design – Effortlessly build stunning websites with nested symbols and shared styles for pixel-perfect consistency.</span></div><div class="v3_123"><div class="v3_124"><div class="name"></div><span class="v3_126">Lightning-Fast Customization</span></div><span class="v3_127">⚡ Edit, tweak, and personalize every element with ease—no design experience needed.</span></div><div class="v3_128"><div class="v3_129"><div class="name"></div><span class="v3_131">Future-Proof & Fully Responsive</span></div><span class="v3_132">🚀 Your website adapts seamlessly to all devices, ensuring a flawless user experience.</span></div></div></div><div class="v3_133"><div class="v3_136"><span class="v3_137">Turn Visitors into Users & Achieve More.</span><span class="v3_138">Effortlessly convert traffic into loyal customers with high-performance websites.</span><div class="v3_139"><div class="v3_140"><div class="v3_141"><div class="v3_142"></div></div><span class="v3_143">Showcase & Embed Your Work – Display portfolios, products, or services seamlessly.</span></div><div class="v3_144"><div class="v3_145"><div class="v3_146"></div></div><span class="v3_147">Publish Across Social Channels – Share your content with one click.</span></div><div class="v3_148"><div class="v3_149"><div class="v3_150"></div></div><span class="v3_151">Sell Your Videos Worldwide – Monetize and distribute effortlessly.</span></div><div class="v3_152"><div class="v3_153"><div class="v3_154"></div></div><span class="v3_155">Blazing-Fast Performance – Optimized for speed to keep users engaged.</span></div></div></div><div class="name"></div></div><div class="v3_172"><div class="v3_174"><div class="v3_175"><span class="v3_176">This tool has completely streamlined my workflow. The UI elements stay perfectly consistent, making design effortless. The video-sharing feature is smooth and works flawlessly on all devices. Highly recommend it!</span><div class="v3_177"><div class="v3_178"><div class="name"></div><div class="name"></div></div><div class="v3_181"><div class="name"></div><div class="v3_183"><span class="v3_184">Alex Carter</span><span class="v3_185">UI/UX Designer</span></div></div></div></div><div class="v3_186"><span class="v3_187">I’ve tried many design tools, but this one stands out. The shared styles and symbols make editing a breeze, and the video quality is crystal clear on every platform. It’s been a game-changer for my projects.</span><div class="v3_188"><div class="v3_189"><div class="name"></div><div class="name"></div></div><div class="v3_192"><div class="name"></div><div class="v3_194"><span class="v3_195">Jordan Blake</span><span class="v3_196">Frontend Developer</span></div></div><div class="v104_168"></div></div></div><div class="v3_197"><span class="v3_198">From design to video-sharing, everything about this platform is seamless. The UI remains perfectly structured, and videos load in top quality across all devices. It’s exactly what I needed to improve my workflow!</span><div class="v3_199"><div class="v3_200"><div class="name"></div><div class="name"></div></div><div class="v3_203"><div class="name"></div><div class="v3_205"><span class="v3_206">Mia Thompson</span><span class="v3_207">Motion Designer</span></div></div></div></div></div></div><div class="v3_208"><div class="v3_210"><div class="v3_211"><span class="v3_212">Seamless Website Creation</span><span class="v3_213">Our platform simplifies website building and optimization. Just input your details, and we’ll generate a high-performing, visually stunning site in minutes.</span></div><div class="v3_214"><div class="name"></div><div class="name"></div><div class="name"></div><div class="name"></div><div class="name"></div></div></div></div><div class="v3_220"><div class="v3_222"><div class="v3_223"><span class="v3_224">Effortless Websites, Maximum Impact</span><span class="v3_225">Create stunning websites that convert visitors into loyal users—quickly and effortlessly.</span></div><div class="v3_226"><div class="name"></div></div></div></div><div class="v3_228"><div class="name"></div><div class="v3_235"><div class="v3_236"><span class="v3_237">First column</span><div class="v3_238"><span class="v3_239">First page</span><span class="v3_240">Second page</span><span class="v3_241">Third</span><span class="v3_242">Fourth</span></div></div><div class="v3_243"><span class="v3_244">Second</span><div class="v3_245"><span class="v3_246">Fifth page</span><span class="v3_247">Sixth page</span><span class="v3_248">Eighth</span></div></div><div class="v3_249"><span class="v3_250">Third</span><div class="v3_251"><span class="v3_252">Fifth page</span><span class="v3_253">Sixth page</span><span class="v3_254">Eighth</span></div></div></div><div class="v3_230"><span class="v3_231">Subscribe</span><div class="v3_232"><div class="name"></div><span class="v3_234">Join our newsletter to stay up to date on features and releases</span></div></div></div><div class="v104_158"></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Helvetica+Neue&display=swap" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <nav class="navigation">
+            <span>First</span>
+            <span>Second</span>
+            <span>Third</span>
+            <span>Fourth</span>
+            <span>Fifth</span>
+            <span>Sixth</span>
+        </nav>
+
+        <header class="hero">
+            <h1>Flawless Websites, Built Just for You</h1>
+            <p>We help you build stunning, high-converting websites without coding. Just share your vision, and we’ll handle the rest.</p>
+            <p>Over 50+ businesses trust us to build their websites.</p>
+        </header>
+
+        <section class="features">
+            <div>
+                <h2>Smart, Scalable UI Design</h2>
+                <p>✅ Effortlessly build stunning websites with nested symbols and shared styles for pixel-perfect consistency.</p>
+            </div>
+            <div>
+                <h2>Lightning-Fast Customization</h2>
+                <p>⚡ Edit, tweak, and personalize every element with ease—no design experience needed.</p>
+            </div>
+            <div>
+                <h2>Future-Proof & Fully Responsive</h2>
+                <p>🚀 Your website adapts seamlessly to all devices, ensuring a flawless user experience.</p>
+            </div>
+        </section>
+
+        <section class="conversion">
+            <h2>Turn Visitors into Users & Achieve More.</h2>
+            <p>Effortlessly convert traffic into loyal customers with high-performance websites.</p>
+            <ul>
+                <li>Showcase & Embed Your Work</li>
+                <li>Publish Across Social Channels</li>
+                <li>Sell Your Videos Worldwide</li>
+                <li>Blazing-Fast Performance</li>
+            </ul>
+        </section>
+
+        <section class="testimonials">
+            <blockquote>
+                <p>This tool has completely streamlined my workflow. The UI elements stay perfectly consistent, making design effortless.</p>
+                <cite>Alex Carter, UI/UX Designer</cite>
+            </blockquote>
+            <blockquote>
+                <p>I’ve tried many design tools, but this one stands out. The shared styles and symbols make editing a breeze.</p>
+                <cite>Jordan Blake, Frontend Developer</cite>
+            </blockquote>
+            <blockquote>
+                <p>From design to video-sharing, everything about this platform is seamless. The UI remains perfectly structured.</p>
+                <cite>Mia Thompson, Motion Designer</cite>
+            </blockquote>
+        </section>
+
+        <section class="call-to-action">
+            <h2>Seamless Website Creation</h2>
+            <p>Our platform simplifies website building and optimization. Just input your details, and we’ll generate a high-performing, visually stunning site in minutes.</p>
+        </section>
+
+        <footer>
+            <div>
+                <h3>Effortless Websites, Maximum Impact</h3>
+                <p>Create stunning websites that convert visitors into loyal users—quickly and effortlessly.</p>
+            </div>
+            <div>
+                <h3>Subscribe</h3>
+                <p>Join our newsletter to stay up to date on features and releases.</p>
+                <input type="email" placeholder="Enter your email">
+                <button>Subscribe</button>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
