--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Helvetica+Neue&display=swap" rel="stylesheet">
+    <meta name="description" content="Build stunning, high-converting websites without coding. Trusted by over 50+ businesses.">
+    <meta name="keywords" content="website, design, UI, UX, responsive, customization">
+    <meta name="author" content="Your Company Name">
+    <title>Flawless Websites - Built Just for You</title>
+    <link href="https://fonts.googleapis.com/css?family=Helvetica+Neue:400,700&display=swap" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: white;
+            margin: 0;
+            font-family: 'Helvetica Neue', sans-serif;
+            color: #333;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .navigation {
+            display: flex;
+            justify-content: space-around;
+            padding: 10px 0;
+            background-color: #f8f9fa;
+        }
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+        }
+        .features, .conversion, .testimonials, .call-to-action {
+            margin: 40px 0;
+        }
+        .features div, .conversion ul {
+            margin: 20px 0;
+        }
+        footer {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+            background-color: #f8f9fa;
+            margin-top: 40px;
+        }
+        footer input, footer button {
+            padding: 10px;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -24,51 +67,53 @@
             <p>Over 50+ businesses trust us to build their websites.</p>
         </header>
 
-        <section class="features">
-            <div>
-                <h2>Smart, Scalable UI Design</h2>
-                <p>✅ Effortlessly build stunning websites with nested symbols and shared styles for pixel-perfect consistency.</p>
-            </div>
-            <div>
-                <h2>Lightning-Fast Customization</h2>
-                <p>⚡ Edit, tweak, and personalize every element with ease—no design experience needed.</p>
-            </div>
-            <div>
-                <h2>Future-Proof & Fully Responsive</h2>
-                <p>🚀 Your website adapts seamlessly to all devices, ensuring a flawless user experience.</p>
-            </div>
-        </section>
+        <main>
+            <section class="features">
+                <div>
+                    <h2>Smart, Scalable UI Design</h2>
+                    <p>✅ Effortlessly build stunning websites with nested symbols and shared styles for pixel-perfect consistency.</p>
+                </div>
+                <div>
+                    <h2>Lightning-Fast Customization</h2>
+                    <p>⚡ Edit, tweak, and personalize every element with ease—no design experience needed.</p>
+                </div>
+                <div>
+                    <h2>Future-Proof & Fully Responsive</h2>
+                    <p>🚀 Your website adapts seamlessly to all devices, ensuring a flawless user experience.</p>
+                </div>
+            </section>
 
-        <section class="conversion">
-            <h2>Turn Visitors into Users & Achieve More.</h2>
-            <p>Effortlessly convert traffic into loyal customers with high-performance websites.</p>
-            <ul>
-                <li>Showcase & Embed Your Work</li>
-                <li>Publish Across Social Channels</li>
-                <li>Sell Your Videos Worldwide</li>
-                <li>Blazing-Fast Performance</li>
-            </ul>
-        </section>
+            <section class="conversion">
+                <h2>Turn Visitors into Users & Achieve More.</h2>
+                <p>Effortlessly convert traffic into loyal customers with high-performance websites.</p>
+                <ul>
+                    <li>Showcase & Embed Your Work</li>
+                    <li>Publish Across Social Channels</li>
+                    <li>Sell Your Videos Worldwide</li>
+                    <li>Blazing-Fast Performance</li>
+                </ul>
+            </section>
 
-        <section class="testimonials">
-            <blockquote>
-                <p>This tool has completely streamlined my workflow. The UI elements stay perfectly consistent, making design effortless.</p>
-                <cite>Alex Carter, UI/UX Designer</cite>
-            </blockquote>
-            <blockquote>
-                <p>I’ve tried many design tools, but this one stands out. The shared styles and symbols make editing a breeze.</p>
-                <cite>Jordan Blake, Frontend Developer</cite>
-            </blockquote>
-            <blockquote>
-                <p>From design to video-sharing, everything about this platform is seamless. The UI remains perfectly structured.</p>
-                <cite>Mia Thompson, Motion Designer</cite>
-            </blockquote>
-        </section>
+            <section class="testimonials">
+                <blockquote>
+                    <p>This tool has completely streamlined my workflow. The UI elements stay perfectly consistent, making design effortless.</p>
+                    <cite>Alex Carter, UI/UX Designer</cite>
+                </blockquote>
+                <blockquote>
+                    <p>I’ve tried many design tools, but this one stands out. The shared styles and symbols make editing a breeze.</p>
+                    <cite>Jordan Blake, Frontend Developer</cite>
+                </blockquote>
+                <blockquote>
+                    <p>From design to video-sharing, everything about this platform is seamless. The UI remains perfectly structured.</p>
+                    <cite>Mia Thompson, Motion Designer</cite>
+                </blockquote>
+            </section>
 
-        <section class="call-to-action">
-            <h2>Seamless Website Creation</h2>
-            <p>Our platform simplifies website building and optimization. Just input your details, and we’ll generate a high-performing, visually stunning site in minutes.</p>
-        </section>
+            <section class="call-to-action">
+                <h2>Seamless Website Creation</h2>
+                <p>Our platform simplifies website building and optimization. Just input your details, and we’ll generate a high-performing, visually stunning site in minutes.</p>
+            </section>
+        </main>
 
         <footer>
             <div>
